# billtitles-py

./: .dockerignore  .env-sample  .gitignore  .sonarcloud.properties  Dockerfile  Dockerfile-base  Jenkinsfile  LICENSE  README.adoc  README.md  alembic.ini  billtitles.db  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
alembic/: env.py
alembic/versions/: 5b305dbc57d6_initial.py  b854d327fb17_restruct_tables.py
billtitles/: billmeta.py  billtitles.db  config.py  constants.py  crud.py  database.py  databaselite.py  deps.py  documents.py  main.py  migrate_data.py  models.py  pymodels.py  schemas.py  settigns_billtitles.py  utils.py
billtitles-py/: Chart.yaml  values.yaml
billtitles-py/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
billtitles-py/templates/tests/: test-connection.yaml
billtitles/api/api_v1/: api.py
billtitles/api/api_v1/endpoints/: bills.py  titles.py
billtitles/dummy/: base.py
data/: sampletitles.json
dockerpgsql/: Dockerfile
docs/: public.uml
