[tool.poetry]
name = "billtitles"
version = "0.1.0"
description = ""
authors = ["Alexander Boiko <django.develop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "1.7.5"
anyio = "3.5.0"
asgiref = "3.5.0"
elasticsearch = "7.17.0"
elasticsearch-dsl = "7.4.0"
click = "8.0.3"
fastapi = "0.74.1"
greenlet = "1.1.2"
gunicorn = "20.1.0"
h11 = "0.13.0"
idna = "3.3"
Mako = "1.1.6"
MarkupSafe = "2.0.1"
podman-compose = "1.0.2"
psycopg2-binary = "2.9.3"
pydantic = "1.9.0"
python-dotenv = "0.19.2"
PyYAML = "6.0"
sniffio = "1.2.0"
SQLAlchemy = "1.4.31"
sqlalchemy2-stubs = "0.0.2a13"
sqlmodel = "0.0.4"
starlette = "0.17.1"
typing-extensions = "4.1.1"
uvicorn = "0.17.5"
structlog = "21.5.0"
black = "22.1.0"
ciso8601 = "2.2.0"
billsim-aih = {git = "https://github.com/aih/billsim.git", branch = "main"}
billtitleindex = {git = "https://github.com/arachnidllc/billtitleindex.git", branch = "test/migrate_to_poetry"}

[tool.poetry.dev-dependencies]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''


